# packed-encoder

./: Cargo.toml  README.md
.github/workflows/: release_check.yml
src/: decoder.rs  encoder.rs  lib.rs
